--- a/ConcurrencyHandlingSample/ConcurrencyHandlingSample.csproj
+++ b/ConcurrencyHandlingSample/ConcurrencyHandlingSample.csproj
@@ -9,6 +9,10 @@
     <PackageReference Include="EfCore.TestSupport" Version="5.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.4" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
+    <PackageReference Include="Polly" Version="7.2.1" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
   </ItemGroup>
 
 </Project>
